--- a/sportsshoes.html
+++ b/sportsshoes.html
@@ -42,7 +42,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product-card">
                     <div class="wishlist" onclick="toggleLike(this)">❤</div>
-                    <img src="/images/red nitro.jpg" class="product-img">
+                    <img src="images/red nitro.jpg" class="product-img">
                     <div class="product-info">
                         <h6>Running Sports Shoes</h6>
                         <div class="rating">★★★★★</div>
