--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/project 2/CSS/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
