--- a/boot.html
+++ b/boot.html
@@ -6,7 +6,7 @@
     <title>AONE Shoes Club | Sports Collection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/boot.css">
+    <link rel="stylesheet" href="css/boot.css">
 </head>
 
 <body>
