--- a/login.html
+++ b/login.html
@@ -27,10 +27,10 @@
             <button class="btn btn-warning nav-btn">👟</button>
 
             <div class="d-flex align-items-center gap-4">
-                <a class="nav-link active" href="/index.html">Home</a>
-                <a class="nav-link" href="/about.html">About</a>
-                <a class="nav-link" href="/category.html">Category</a>
-                <a class="nav-link" href="/project 2/html/login.html">Login</a>
+                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="category.html">Category</a>
+                <a class="nav-link" href="login.html">Login</a>
             </div>
 
             <button class="btn btn-outline-light nav-btn">👟</button>
